# tiktok-live-events

./: README.md  start.bat  start.sh
node/: README.md  package.json  start.bat  start.sh
node/examples/: 01-chat-logger.js  02-gift-leaderboard.js  03-pk-mvp-tracker.js  04-discord-relay.js  05-obs-overlay.js
node/src/: cli.ts  index.ts
python/: README.md  pyproject.toml  start.bat  start.sh
python/examples/: 01_chat_logger.py  02_gift_leaderboard.py  03_pk_mvp_tracker.py
python/tiktok_live_events/: __init__.py  cli.py  client.py  types.py
